; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gap/extr_gap_conn.c_gap_conn_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gap/extr_gap_conn.c_gap_conn_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32*, i8*, i8*, i32*, i32*, i8*, i8*, i8*, i32*, i8*, i8*, i32*, i32*, i32*, i32*, i32*, i8*, i8*, i32*, i32*, i8*, i8*, i8*, i32*, i8*, i8* }

@gap_connect_ind = common dso_local global i8* null, align 8
@gap_cb = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@gap_connect_cfm = common dso_local global i8* null, align 8
@gap_config_ind = common dso_local global i8* null, align 8
@gap_config_cfm = common dso_local global i8* null, align 8
@gap_disconnect_ind = common dso_local global i8* null, align 8
@gap_data_ind = common dso_local global i8* null, align 8
@gap_congestion_ind = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gap_conn_init() #0 {
  %1 = load i8*, i8** @gap_connect_ind, align 8
  store i8* %1, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 10), align 8
  %2 = load i8*, i8** @gap_connect_cfm, align 8
  store i8* %2, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 9), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 8), align 8
  %3 = load i8*, i8** @gap_config_ind, align 8
  store i8* %3, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 7), align 8
  %4 = load i8*, i8** @gap_config_cfm, align 8
  store i8* %4, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 6), align 8
  %5 = load i8*, i8** @gap_disconnect_ind, align 8
  store i8* %5, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 5), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 4), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 3), align 8
  %6 = load i8*, i8** @gap_data_ind, align 8
  store i8* %6, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 2), align 8
  %7 = load i8*, i8** @gap_congestion_ind, align 8
  store i8* %7, i8** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 1), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @gap_cb, i32 0, i32 0, i32 0, i32 0), align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
